syntax = "proto3";
package thesixnetwork.sixprotocol.evmbind;

import "evmbind/binding.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/thesixnetwork/six-protocol/x/evmbind/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateBinding(MsgCreateBinding) returns (MsgCreateBindingResponse);
  rpc UpdateBinding(MsgUpdateBinding) returns (MsgUpdateBindingResponse);
  rpc DeleteBinding(MsgDeleteBinding) returns (MsgDeleteBindingResponse);
  rpc EthSend(MsgEthSend) returns (MsgEthSendResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateBinding {
  string creator = 1;
  string ethAddress = 2;

  string ethSignature = 3;
  string signMessage = 4;
}
message MsgCreateBindingResponse {}

message MsgUpdateBinding {
  string creator = 1;
  string ethAddress = 2;

  string ethSignature = 3;
  string signMessage = 4;
}
message MsgUpdateBindingResponse {}

message MsgDeleteBinding {
  string creator = 1;
  string ethAddress = 2;
}
message MsgDeleteBindingResponse {}

message MsgEthSend {
  string creator = 1;
  string fromEth = 2;
  string toEth = 3;
  string amount = 4;
}

message MsgEthSendResponse {
}

// this line is used by starport scaffolding # proto/tx/message
